# sim-sdk

./: .gitignore  BROCHURE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  README.md  SIM.md  features.toml  release-plz.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/sim-conformance/: BROCHURE.md  Cargo.toml  README.md
crates/sim-conformance/recipes/: book.toml
crates/sim-conformance/recipes/01-basics/: chapter.toml
crates/sim-conformance/recipes/01-basics/run-contract/: README.md  input.sh  recipe.toml
crates/sim-conformance/tests/: agents30.rs  atelier_self_hosting.rs  cli_boot.rs  core_primitives.rs  lib_lifecycle.rs  no_direct_kernel_imports.rs  placement_matrix.rs  shape_grammar.rs  spec.rs
crates/sim-conformance/tests/conformance_support/: mod.rs
crates/sim-conformance/tests/spec/: cli_boot.rs  forge_author.rs  forge_eval.rs  instrument_streams.rs  lib_lifecycle.rs  placement.rs  rust_intelligence.rs  stream_matrix.rs  support.rs  surface_protocol.rs
docs/agents/: card-index.json  cards.jsonl
docs/humans/: README.md
examples/: codec_roundtrip.rs  repl.rs
recipes/: book.toml
recipes/01-basics/: chapter.toml
recipes/device/: chapter.toml
recipes/glasses/: book.toml  chapter.toml
recipes/watch/: book.toml  chapter.toml
src/: classes.rs  codec_matrix_tests.rs  compat.rs  feature_contract_tests.rs  femm_exports.rs  functions.rs  lib.rs  loaders.rs  macros.rs  music_stack.rs  music_stack_tests.rs  numbers_exports.rs  roadmap11_exports.rs  runtime.rs  shapes.rs  skill_tests.rs  standard_exports.rs
src/classes/: lib_support.rs  model.rs  tests.rs
src/codec_matrix_tests/: bridge_roundtrip.rs  roadmap11.rs  (+6 more)
tests/: citizen.rs  cli_surface.rs  cookbook.rs  cross_repo_contracts.rs  direct_surfaces.rs  facade_aliases.rs  genai_feature_bundles.rs  native_dynamic.rs  proc_macro_compile_fail.rs  proc_macros.rs  r24_midi_features.rs  r25_portaudio_features.rs  r26_alsa_features.rs  r27_pipewire_features.rs  r28_jack_features.rs  r29_audio_graph_live_features.rs  r30_audio_dsp_features.rs  r31_audio_synth_features.rs  r32_plugin_clap_features.rs  r33_plugin_lv2_features.rs  r34_plugin_vst3_features.rs  r35_platform_audio_features.rs  r36_daw_session_features.rs  server_agent_e2e.rs  server_agent_e2e_support.rs  server_agent_swarm_e2e.rs
tests/native-plugin/: Cargo.toml
tests/native-plugin/src/: lib.rs
(+197 files in other folders)
