[package]
name = "sim-conformance"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Executable conformance tests for SIM architecture claims."
readme = "README.md"
publish = false
repository = "https://github.com/sim-nest/sim-sdk"
homepage = "https://github.com/sim-nest/sim-sdk"

[dev-dependencies]
sim = { package = "sim-nest", version = "0.1.0", default-features = false, features = ["core", "shape", "codec-lisp", "codec-json", "codec-binary", "codec-binary-base64", "codec-bitwise", "codec-bitwise-base64", "codec-algol", "numbers-prelude", "numbers-stats", "standard", "server", "agent", "control", "exec", "table-fs", "table-http", "wasm", "dynamic-native", "rank", "stream-core", "stream-combinators", "stream-fabric", "stream-file", "stream-host", "stream-bridge", "music-synth", "audio-graph-live", "daw-session", "topology-core", "web-bridge", "view-daw", "forge"], path = "../.." }
sim-lib-cookbook = { version = "0.1.13", default-features = false }
sim-value = { version = "0.1.2" }
