[package]
name = "native-plugin-fixture"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
sim = { package = "sim-nest", version = "0.1.0", path = "../..", default-features = false, features = ["core", "shape", "numbers-f64", "proc-macros", "dynamic-native"] }
